@@ -1343,7 +1343,7 @@ function oracle_get_system_time() {
 	if ($time != 0)
 		return $time;
 	
-	if ($config["timesource"] = "sql") {
+	if ($config["timesource"] == "sql") {
 		$time = db_get_sql ("SELECT ceil((sysdate - to_date('19700101000000','YYYYMMDDHH24MISS')) * (86400)) as dt FROM dual");
 		if (empty ($time)) {
 			return time ();
